# robomimic

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
docs/introduction/: installation.md
robomimic/algo/: diffusion_policy.py
